# cmake_boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  Structure.md  build_all.sh  conanfile.txt  devenv_and_run.ps1  devenv_and_run.sh  docker_devenv.sh  format.sh  inst.ps1  lint.sh  path.txt  run.sh  vcpkg.json
.github/workflows/: build_cmake.yml
docs/: CMakeLists.txt  Doxyfile.in
include/: include.hpp
lib/: CMakeLists.txt
res/: app.qrc
shaders/: shader.vert  shaders.frag
src/: CMakeLists.txt  main.cpp  main.qml
test/: CMakeLists.txt
